@@ -19,11 +19,11 @@ which gnome-autogen.sh || {
 }
 
 
-REQUIRED_AUTOCONF_VERSION=2.57
-REQUIRED_AUTOMAKE_VERSION=1.8
-REQUIRED_INTLTOOL_VERSION=0.35.0
-REQUIRED_PKG_CONFIG_VERSION=0.16.0
-USE_GNOME2_MACROS=1 USE_COMMON_DOC_BUILD=yes gnome-autogen.sh $@
+REQUIRED_AUTOCONF_VERSION=2.57 \
+REQUIRED_AUTOMAKE_VERSION=1.8 \
+REQUIRED_INTLTOOL_VERSION=0.35.0 \
+REQUIRED_PKG_CONFIG_VERSION=0.16.0 \
+	USE_GNOME2_MACROS=1 USE_COMMON_DOC_BUILD=yes gnome-autogen.sh $@
 if test "$?" != "0"
 then
         cat << _EOF_
