@@ -1,5 +1,10 @@
 2007-08-25  Frederic Peters  <fpeters@0d.be>
 
+	* autogen.sh, configure.ac: correctly set environment variables for
+	gnome-autogen.sh; and removed debugging statement from configure.ac
+
+2007-08-25  Frederic Peters  <fpeters@0d.be>
+
 	* INSTALL, autogen.sh, configure.ac, doc/Makefile.am: disable doc
 	build/install by default, so make install works exactly like before,
 	installing stuff in ~, not trying to install help files in $prefix.
